fix: z-index 99 для кнопки открытия формы fix: передача количества проектов в слайдер

--- a/src/components/ButtonOpenForm/ButtonOpenForm.module.scss
+++ b/src/components/ButtonOpenForm/ButtonOpenForm.module.scss
@@ -2,7 +2,7 @@ div.btn_wrapper {
     align-self: flex-end;
     position: fixed;
     bottom: 40px;
-    z-index: 5;
+    z-index: 99;
     width: fit-content;
 
     &.hide {
